--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
       - name: npm ci
         run: |
           npm ci
-      # - name: Run test
-      #   run: |
-      #     npm run test
+      - name: Run test
+        run: |
+          npm run test
       - name: Run build
         run: npm run build
