include wasm file to build resutl

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^24.10.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0",
     "vitepress": "^1.6.4",
     "vitest": "^4.0.8"
   },
