--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
   "name": "image-resizer-niki",
   "version": "0.0.0",
+  "description": "JavaScript package for resizing images in the browser.",
+  "author": {
+    "name": "yosipy"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yosipy/image-resizer-niki"
+  },
   "type": "module",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/index.umd.cjs"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc -p tsconfig.package.json",
